# BBR

./: .gitignore  Pipfile  README.md  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scrapingmodels.py  settings.py
BBR/: settings.py
BBR/products/: forms.py  signals.py
core/: admin.py  apps.py  models.py  views.py
distutils-1.0/distutils-1.0/: distutils-1.0
eccpp_crawler/: scrapy.cfg
eccpp_crawler/eccpp_crawler/: items.py  middlewares.py  pipelines.py  settings.py
ecommerce/cart/: models.py  views.py
ecommerce/ecommerce/: urls.py
ecommerce/orders/: admin.py  forms.py  models.py  urls.py  views.py
ecommerce/products/: admin.py  models.py  urls.py  views.py
ecommerce/templates/: base.html
ecommerce/users/: admin.py  (+4 more)
ecommerce_project/: $.txt  Views.py  settings.py  urls.py
inventory/: admin.py  models.py  urls.py  views.py
myenv/: pyvenv.cfg
parts/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
products/: # dynamic_apps.py.txt  admin.py  apps.py  forms.py  ftp_import.py  middleware.py  models.py  scraper.py  search.py  signals.py  tests.py  url_patterns.py  urls.py  views.py
scraping/: admin.py  apps.py  config.py  index.html  models.py  run_spider.py  scraper.py  utils.py  views.py
static/: styles.css
templates/: 404.html  base.html  cart.html  checkout.html  contact.html  flash_sales.html  home.html  newsletter_subscription.html  order_confirmation.html  order_history.html  payment.html  product_detail.html  product_share.html  products.html  search_results.html  user_profile.html
(+47 files in other folders)
