[tool.poetry]
name = "bbr"
version = "0.1.0"
description = ""
authors = ["Zromans <Zromans@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "4.9.3"
requests = "2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
