[tool.poetry]
name = "bbr"
version = "0.1.0"
description = "BBR E-commerce Project"
authors = ["Zromans <Zromans@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.1.1"
celery = "5.4.0"
django-celery-beat = "2.7.0"
django-celery-results = "2.5.1"
django-redis = "5.4.0"
psycopg2-binary = "2.9.9"
Scrapy = "2.11.2"
selenium = "4.24.0"
beautifulsoup4 = "4.9.3"
requests = "2.32.3"
pandas = "2.2.2"
stripe = "2.65.0"
pillow = "9.5.0"
django-allauth = "0.54.0"
django-crispy-forms = "2.0"
django-debug-toolbar = "4.1.0"
gunicorn = "20.1.0"
whitenoise = "6.5.0"
sentry-sdk = "1.28.1"
django-storages = "1.13.2"
django-cors-headers = "4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.9.1"
